apps/kubernetes-dashboard/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: dashboard
  namespace: kubernetes-dashboard
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`ui.k8s.bourne.cloud`)
      kind: Rule
      services:
        - name: kubernetes-dashboard-kong-proxy
          namespace: kubernetes-dashboard
          port: 443
          scheme: https
  tls:
    secretName: bourne-cloud-wildcard-tls
